--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       property="og:title"
       content="Visit thuongton999's portfolio website."
     />
+    <meta
+      name="keywords"
+      content="thuongton999, vutungminh, portfolio, vu, tung, minh, phuyen, thuongton"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vutungminh.dev" />
     <meta property="og:description" content="Visit thuongton999's portfolio." />
